<package format="2">
  <name>executive_panel</name>
  <version>0.0.1</version>
  <description>where the autonomy happens</description>
  <maintainer email="bkolligs@andrew.cmu.edu">Ben Kolligs</maintainer>
  <license>proprietary</license>

  <buildtool_depend>catkin</buildtool_depend>
  <depend>rviz</depend>

  <depend>roscpp</depend>
  <depend>rospy</depend>
  <depend>dragoon_messages</depend>

  <build_depend>qtbase5-dev</build_depend>

  <exec_depend>libqt5-core</exec_depend>
  <exec_depend>libqt5-gui</exec_depend>
  <exec_depend>libqt5-widgets</exec_depend>

  <export>
      <rviz plugin="${prefix}/executive_panel.xml"/>
  </export>
</package>
